feat: refactor AplikasiServiceImpl to streamline entity creation and updates, and simplify list handling in VariableController